--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,12 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>React App</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+  <meta name="theme-color" content="#19459f" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://escrowly.com" />
+  <title>Escrowly - Secure Crypto Escrow for Safe Online Transactions</title>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
     rel="stylesheet">
 
 </head>
